<resources>
    <string name="app_name">Orangefly</string>
    <string name="title_store">Store</string>
    <string name="title_photo">Photos</string>
    <string name="title_upload">Upload</string>
    <string name="title_account">Account</string>
    <string name="title_cart">Cart</string>
    <string name="title_home">All Categories</string>
    <string name="registered_email_id">Please enter your Registered Email/Mobile below : </string>
    <string name="forget_otp">Please enter OTP<font color='#FF0000'> *</font></string>
    <string name="empty_cart">Looks like your cart is empty</string>
    <string name="continue_cart">Continue Shopping</string>
    <string name="greetings_text">Hello  </string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Join Orangefly</string>
    <string name="forget_pwd">Forgot Password</string>
    <string name="sign_out"><u>Sign out</u></string>
    <string name="email">Email Id</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset Password</string>
    <string name="hint_first_name">First Name<font color='#FF0000'> *</font></string>
    <string name="hint_last_name">Last Name<font color='#FF0000'> *</font></string>
    <string name="hint_mobile">Mobile<font color='#FF0000'> *</font></string>
    <string name="hint_email">Email<font color='#FF0000'> *</font></string>
    <string name="hint_pwd">Password<font color='#FF0000'> *</font></string>
    <string name="hint_email_pwd">Email/Mobile<font color='#FF0000'> *</font></string>
    <string name="hint_address_type">Address Type (Eg: Home, Office, etc)<font color='#FF0000'> *</font></string>
    <string name="hint_address_name">Name<font color='#FF0000'> *</font></string>
    <string name="hint_address_building">Door No., Flat No., Building Name, etc<font color='#FF0000'> *</font></string>
    <string name="hint_address_street">Street, Nagar, etc<font color='#FF0000'> *</font></string>
    <string name="hint_address_area">Area<font color='#FF0000'> *</font></string>
    <string name="hint_address_city">City<font color='#FF0000'> *</font></string>
    <string name="hint_address_postal">Postal Code<font color='#FF0000'> *</font></string>
    <string name="hint_old_password">Old Password<font color='#FF0000'> *</font></string>
    <string name="hint_new_password">New Password<font color='#FF0000'> *</font></string>
    <string name="hint_confirm_password">Confirm Password<font color='#FF0000'> *</font></string>
</resources>