<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/selector_store"
        android:title="@string/title_store" />

<!--    <item-->
<!--        android:id="@+id/navigation_photo"-->
<!--        android:icon="@drawable/ic_outline_image_24"-->
<!--        android:title="@string/title_photo" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_upload"-->
<!--        android:icon="@drawable/ic_outline_cloud_upload_24"-->
<!--        android:title="@string/title_upload" />-->

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/selector_account"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/selector_cart"
        android:title="@string/title_cart" />
</menu>