<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="17sp"
        android:textColor="@color/logo_orange"
        android:text="@string/registered_email_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registered_emailid"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forget_otp"
            android:background="@color/white"
            android:hint="@string/forget_otp"
            android:imeOptions="actionGo"
            android:inputType="number"
            android:maxLength="4"
            android:visibility="gone"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_sign_up_join"
        android:background="@color/logo_orange"
        android:textColor="@color/white"
        android:text="@string/submit"
        />


</LinearLayout>