<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/logo_orange"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:foregroundGravity="center_horizontal"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/outline_account_circle_24" />
            </androidx.cardview.widget.CardView>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:text="KG Official"-->
<!--                android:textColor="#fff"-->
<!--                android:textSize="23dp"-->
<!--                android:textStyle="bold" />-->
        </LinearLayout>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="120dp"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginRight="20dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            app:cardCornerRadius="5dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:weightSum="3"-->
<!--                android:orientation="horizontal"-->
<!--                android:padding="10dp">-->
<!--                <LinearLayout-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:orientation="vertical"-->
<!--                    android:gravity="center">-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Subscribers"-->
<!--                        android:textSize="17dp"-->
<!--                        android:textColor="#000"/>-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="1000K+"-->
<!--                        android:textSize="27dp"-->
<!--                        android:textColor="#2196F3"-->
<!--                        android:textStyle="bold"/>-->

<!--                </LinearLayout>-->
<!--                <LinearLayout-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:orientation="vertical"-->
<!--                    android:gravity="center">-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Likes"-->
<!--                        android:textSize="17dp"-->
<!--                        android:textColor="#000"/>-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="500K+"-->
<!--                        android:textSize="27dp"-->
<!--                        android:textColor="#2196F3"-->
<!--                        android:textStyle="bold"/>-->

<!--                </LinearLayout>-->
<!--                <LinearLayout-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:orientation="vertical"-->
<!--                    android:gravity="center">-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Shares"-->
<!--                        android:textSize="17dp"-->
<!--                        android:textColor="#000"/>-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="33.1K+"-->
<!--                        android:textSize="27dp"-->
<!--                        android:textColor="#2196F3"-->
<!--                        android:textStyle="bold"/>-->

<!--                </LinearLayout>-->

<!--            </LinearLayout>-->


<!--        </androidx.cardview.widget.CardView>-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pf_first_name"
                    android:background="@color/white"
                    android:hint="@string/hint_first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pf_last_name"
                    android:background="@color/white"
                    android:hint="@string/hint_last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pf_email"
                    android:background="@color/white"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>

